# rust-nbe-for-mltt

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/: README.md
crates/mltt-cli/: Cargo.toml
crates/mltt-cli/src/: lib.rs  main.rs  repl.rs
crates/mltt-concrete/: Cargo.toml
crates/mltt-concrete/src/: desugar.rs  elaborate.rs  lexer.rs  lib.rs  pretty.rs  resugar.rs  syntax.rs
crates/mltt-concrete/src/syntax/: concrete.rs  mod.rs  raw.rs
crates/mltt-core/: Cargo.toml
crates/mltt-core/src/: check.rs  domain.rs  env.rs  global.rs  lib.rs  literal.rs  meta.rs  nbe.rs  pretty.rs  prim.rs  syntax.rs  validate.rs  var.rs
crates/mltt-core/src/syntax/: core.rs  doc.rs  domain.rs  mod.rs  normal.rs  pretty.rs
crates/mltt-core/tests/: properties.rs
crates/mltt-elaborate/: Cargo.toml
crates/mltt-elaborate/src/: clause.rs  context.rs  docs.rs  errors.rs  lib.rs  literal.rs  nbe.rs  unify.rs
crates/mltt-parse/: Cargo.toml
crates/mltt-parse/src/: lexer.rs  lib.rs  parser.rs  token.rs
crates/mltt-parse/tests/: lexer.rs  parser.rs
crates/mltt-span/: Cargo.toml
crates/mltt-span/src/: file.rs  index.rs  lib.rs  location.rs  span.rs
crates/mltt-span/src/index/: byte.rs  column.rs  line.rs
crates/mltt-test/: Cargo.toml  build.rs
crates/mltt-test-generate/: Cargo.toml
crates/mltt-test-generate/src/: lib.rs
crates/mltt-test-harness/: Cargo.toml
crates/mltt-test-harness/src/: lib.rs
crates/mltt-test/src/: lib.rs  support.rs
src/: check.rs  desugar.rs  lib.rs  main.rs  nbe.rs  resugar.rs
src/syntax/: concrete.rs  core.rs  desugar.rs  domain.rs  mod.rs  normal.rs
tests/: case-expressions.mltt  case-implicit-params.mltt  categories.mltt  combinators.mltt  connectives.mltt  cumulativity.mltt  let-expressions.mltt  literals.mltt  primitives.mltt  records.mltt  universe-lifting.mltt
tests/elaborate/check-fail/record-intro/: unexpected-field.type.mltt
tests/elaborate/check-pass/: case-default-bind.term.mltt  case-default-bind.type.mltt  case-default.term.mltt  fun-intro-implicit.term.mltt  if.term.mltt  parens.term.mltt  prim.term.mltt  record-intro-singleton1.term.mltt
tests/elaborate/check-pass/case/: overlapping.term.mltt  simple.term.mltt  simple.type.mltt
tests/elaborate/check-pass/fun-intro/: instance.term.mltt  instance.type.mltt
tests/elaborate/check-pass/literal-intro/s16/: bin-max.term.mltt  hex-max.term.mltt  hex-min.term.mltt  oct-max.term.mltt  oct-min.term.mltt
tests/elaborate/check-pass/literal-intro/s32/: bin-max.term.mltt  hex-min.term.mltt  oct-max.term.mltt  oct-min.term.mltt  oct-min.type.mltt
tests/elaborate/check-pass/literal-intro/s64/: bin-min.term.mltt  hex-max.term.mltt  hex-min.type.mltt
tests/elaborate/check-pass/literal-intro/s8/: bin-max.term.mltt  bin-min.term.mltt  oct-max.term.mltt  oct-max.type.mltt  oct-min.term.mltt
tests/elaborate/check-pass/literal-intro/u16/: bin-max.term.mltt  oct-max.term.mltt  oct-max.type.mltt
tests/elaborate/check-pass/literal-intro/u32/: bin-max.term.mltt
tests/elaborate/check-pass/literal-intro/u64/: bin-max.term.mltt  oct-max.term.mltt
tests/elaborate/check-pass/literal-intro/u8/: bin-max.term.mltt  bin-max.type.mltt  hex-max.term.mltt  oct-max.term.mltt
tests/elaborate/check-pass/record-intro/: dependent-pair.term.mltt  singleton.term.mltt  singleton.type.mltt
tests/elaborate/pass/: case-default-bind.term.mltt  case-default.term.mltt  case-default.type.mltt  case-overlapping.term.mltt  case-simple.term.mltt  fun-elim-implicit.term.mltt  fun-elim.term.mltt  fun-intro-implicit.term.mltt  fun-intro-implicit.type.mltt  fun-intro.term.mltt  fun-type-param-group-2.term.mltt  fun-type-type-term.term.mltt  fun-type-type1-term.term.mltt  if.term.mltt  literal-intro-u8-dec-max.term.mltt  literal-intro-u8-dec-min.term.mltt  literal-type-u64.term.mltt  prim.term.mltt  prim.type.mltt  record-elim-dependent.term.mltt  record-intro-singleton.term.mltt  record-intro-singleton1.term.mltt  record-intro-singleton1.type.mltt  record-type-dependent.term.mltt  record-type-singleton1.term.mltt  type0.term.mltt
tests/elaborate/synth-fail/: prim-ambiguous.term.mltt  prim-unknown.term.mltt  record-intro-ambiguous.term.mltt  type-level-overflow.term.mltt
tests/elaborate/synth-fail/let/: already-defined.term.mltt  not-yet-declared.term.mltt
tests/elaborate/synth-fail/record-elim/: not-found.term.mltt
tests/elaborate/synth-pass/: fun-type-param-group-1.term.mltt  fun-type-term-type1.term.mltt  literal-intro-char-escape-ascii-lower-max.term.mltt  literal-intro-char-escape-simple-carriage-return.term.mltt  literal-intro-char-escape-unicode-upper-max.term.mltt  literal-type-f32.term.mltt  literal-type-f64.term.mltt  parens.term.mltt  record-type-dependent.type.mltt
tests/elaborate/synth-pass/fun-elim/: implicit-insert-meta.term.mltt  instance.term.mltt
tests/elaborate/synth-pass/fun-type-arrow/: term-type.term.mltt  term-type1.type.mltt
tests/elaborate/synth-pass/let/: complicated.term.mltt  declaration-definition.term.mltt  definition.term.mltt  forward-declarations.term.mltt  forward-declarations.type.mltt
tests/elaborate/synth-pass/record-elim/: singleton.term.mltt  singleton.type.mltt
tests/elaborate/synth-pass/record-intro/: empty.term.mltt
tests/goldenfiles/: case_expressions.concrete  case_expressions.core  categories.concrete  categories.core  combinators.concrete  combinators.core  connectives.concrete  connectives.core  cumulativity.concrete  cumulativity.core  forward_declarations.concrete  forward_declarations.core  if_expressions.concrete  if_expressions.core  let_expressions.concrete  let_expressions.core  literals.concrete  literals.core  primitives.concrete  primitives.core  records.concrete  records.core
tests/normalize/: ann.a.mltt-core  ann.b.mltt-core  record-elim-singleton.a.mltt-core
tests/samples/: categories.mltt  combinators.mltt  connectives.mltt  cumulativity.mltt  forward-declarations.mltt  if-expressions.mltt  let-expressions.mltt  literals.mltt  map.mltt  primitives.mltt  records.mltt
(+27 files in other folders)
