[package]
name = "mltt-cli"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "The command line interface for the MLTT language"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
mltt-concrete = { path = "../mltt-concrete"}
mltt-core = { path = "../mltt-core"}
mltt-elaborate = { path = "../mltt-elaborate"}
mltt-parse = { path = "../mltt-parse"}
mltt-span = { path = "../mltt-span"}
pretty = "0.5"
pretty_env_logger = "0.3"
rustyline = "4.0"
structopt = "0.2"
