[package]
name = "mltt-concrete"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "The concrete syntax of the MLTT language"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
im = "13.0.0"
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
log = "0.4"
mltt-span = { path = "../mltt-span" }
pretty = "0.5"
