[package]
name = "mltt-core"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "The core type theory of the MLTT language"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
im = "15.1.0"
itertools = "0.8"
log = "0.4"
mltt-span = { path = "../mltt-span" }
pretty = "0.5"
