[package]
name = "mltt-elaborate"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Elaboration of the MLTT language's concrete syntax into its core syntax"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
im = "12.3"
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
log = "0.4"
mltt-core = { path = "../mltt-core" }
mltt-concrete = { path = "../mltt-concrete" }
mltt-span = { path = "../mltt-span" }
pretty = "0.5"
