[package]
name = "mltt-parse"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
mltt-concrete = { path = "../mltt-concrete" }
mltt-span = { path = "../mltt-span" }
pretty_assertions = "0.5.1"
