[package]
name = "mltt-span"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Data structures for tracking source positions in the MLTT language"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
unicode-segmentation = "1.2"
pretty_assertions = "0.6"
