[package]
name = "mltt-test-harness"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "MIT"
edition = "2018"
publish = false

[dependencies]
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
mltt-concrete = { path = "../mltt-concrete"}
mltt-core = { path = "../mltt-core"}
mltt-parse = { path = "../mltt-parse"}
mltt-span = { path = "../mltt-span"}
pretty_env_logger = "0.3"
