[package]
name = "mltt-test"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Integration tests for the MLTT language"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
mltt-test-harness = { path = "../mltt-test-harness" }

[build-dependencies]
heck = "0.3.1"
