[package]
name = "mltt-test"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Integration tests for the MLTT language"
license = "MIT"
edition = "2018"
publish = false

[dependencies]
goldenfile = "1.0.3"
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
mltt-concrete = { path = "../mltt-concrete"}
mltt-core = { path = "../mltt-core"}
mltt-elaborate = { path = "../mltt-elaborate"}
mltt-parse = { path = "../mltt-parse"}
mltt-span = { path = "../mltt-span"}
pretty_env_logger = "0.3"
